<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">joinLive</string>
    <string name="tx_join_live_title">直播连麦</string>
    <string name="tx_refresh_hint">下拉完成刷新房间列表</string>
    <string name="tx_create_room_title">创建房间</string>
    <string name="tx_create_live">创建直播</string>
    <string name="tx_room_list_is_empty">暂无直播房间</string>
    <string name="tx_confirm_start_publish">确定推流</string>
    <string name="tx_doc_link">《进阶功能-直播连麦》</string>
    <string name="tx_joinlive_guide">连麦指引</string>
    <string name="tx_anchor_title">主播</string>
    <string name="tx_audience_title">观众</string>

    <string name="join_live_count_overflow">连麦已满人，此demo只展示三人连麦</string>
    <string name="tx_joinLive">视频连麦</string>
    <string name="tx_end_join_live">结束连麦</string>
    <string name="room_no_publish">该房间没有推流，请刷新房间列表后重试!</string>
    <string name="has_no_textureView">没有空闲的视图了</string>
    <string name="tx_anchor_stoppublish">主播已停止直播</string>


    <string name="has_joined_live">你已连麦</string>


</resources>
