<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:orientation="vertical">

            <com.zego.common.widgets.TitleLayout
                android:id="@+id/title"
                app:name="@string/tx_join_live_title"
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <Button
                    android:id="@+id/go_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:background="@mipmap/ic_round_left" />
            </com.zego.common.widgets.TitleLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="#9b9b9b" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/query_room_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/tx_room_list_is_empty" />

                <android.support.v4.widget.SwipeRefreshLayout
                    android:id="@+id/refreshLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/room_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </android.support.v4.widget.SwipeRefreshLayout>

                <TextView
                    android:id="@+id/refresh_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="110dp"
                    android:gravity="center"
                    android:text="@string/tx_refresh_hint" />

                <Button
                    android:id="@+id/btn_jumLoginRoom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/refresh_hint"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="60dp"
                    android:onClick="onClickCreateRoom"
                    android:text="@string/tx_create_room_title" />

                <TextView
                    android:id="@+id/link_code_demo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/btn_jumLoginRoom"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30dp"
                    android:onClick="browseDoc"
                    android:text="@string/tx_doc_link"
                    android:textColor="@color/blue" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
